--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-        <junit.jupiter.engine.version>5.3.2</junit.jupiter.engine.version>
-        <junit.vintage.engine.version>5.3.2</junit.vintage.engine.version>
-        <junit.jupiter.engine.version>5.3.2</junit.jupiter.engine.version>
-        <junit.platform.launcher.version>1.3.2</junit.platform.launcher.version>
-        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+        <junit.jupiter.engine.version>5.4.0-M1</junit.jupiter.engine.version>
+        <junit.vintage.engine.version>5.4.0-M1</junit.vintage.engine.version>
+        <junit.jupiter.engine.version>5.4.0-M1</junit.jupiter.engine.version>
+        <junit.platform.launcher.version>1.4.0-RC2</junit.platform.launcher.version>
+        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
     </properties>
 
     <dependencies>
@@ -88,6 +88,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <excludedGroups>slow, production</excludedGroups>
+                </configuration>
             </plugin>
         </plugins>
     </build>
