--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,6 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-        <junit.jupiter.engine.version>5.4.0-M1</junit.jupiter.engine.version>
-        <junit.vintage.engine.version>5.4.0-M1</junit.vintage.engine.version>
-        <junit.jupiter.engine.version>5.4.0-M1</junit.jupiter.engine.version>
-        <junit.platform.launcher.version>1.4.0-RC2</junit.platform.launcher.version>
-        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
     </properties>
 
     <dependencies>
@@ -35,19 +29,19 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>${junit.platform.launcher.version}</version>
+            <version>1.3.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.engine.version}</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.vintage.engine.version}</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -99,7 +93,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
+                <version>2.22.1</version>
                 <configuration>
                     <excludedGroups>slow, production</excludedGroups>
                 </configuration>
